# words

./: Dockerfile  README.md  docker-compose.yml  jupyter.Dockerfile  main.py  ollama.Dockerfile  ollama.ipynb  pyproject.toml
